# video-registry

./: .gitignore  Makefile  README.rst  boussole.json  package-lock.json  package.json  setup.cfg  webpack.config.js
docs/: cli.rst  conf.py  development.rst  index.rst  install.rst  requirements.txt
docs/core/: exceptions.rst  hello.rst  logger.rst
frontend/scss/: main.scss  styleguide.scss  styleguide_manifest.scss
frontend/scss/components/: _container.scss  _content.scss  _footer.scss  _header.scss
frontend/scss/generic/: _background.scss  _keyframes.scss  _type.scss
frontend/scss/objects/: _buttons.scss  _icomoon.scss  _loading.scss
frontend/src/: app.js
tests/: conftest.py  utils.py
tests/010_backend/: 001_peewee.py  010_models.py
tests/020_discovery/: 021_discovery.py
tests/030_renderer/: 031_render.py
tests/040_apps/: 041_index.py  042_list.py  043_search.py
tests/040_settings/: 041_init.py  042_inspect.py
tests/050_apps/: 050_base.py  051_index.py  052_list.py  053_search.py  054_styleguide.py
tests/050_server/: 050_static.py  051_index.py  052_search.py
tests/060_server/: 061_static.py  062_index.py  063_search.py
tests/100_cli/: 001_cli_version.py
video_registry/: __init__.py  discovery.py  exceptions.py  hello.py  renderer.py  utils.py
video_registry/backend/: initialize.py  models.py
video_registry/cli/: discovery.py  entrypoint.py  greet.py  run.py  version.py
video_registry/serve/: __init__.py  apps.py  mixins.py  server.py  settings.py
video_registry/templates/: index.html  skeleton.html
(+22 files in other folders)
