;;
;; Video Registry package
;;
[metadata]
name = video-registry
version = 0.1.0
description = Scan directories to collect video files into a registry
long_description = file:README.rst
long_description_content_type = text/x-rst
author = David Thenon
author_email = sveetch@gmail.com
url = https://github.com/sveetch/video-registry
license = MIT
keywords = Python
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3

[options]
include_package_data = True
install_requires =
    click
    colorama
    colorlog
    peewee==3.14.0
    Jinja2>=2.11,<3.0
    cherrypy>=18.6.0,<19.0.0
packages = find:
zip_safe = True

[options.extras_require]
dev =
    flake8
    pytest
    sphinx
    sphinx-rtd-theme
    livereload
    twine
    pyquery==1.4.3
    boussole

[options.packages.find]
where = .
exclude=
    data
    docs
    tests

[options.entry_points]
console_scripts =
    video_registry = video_registry.cli.entrypoint:cli_frontend

[wheel]
universal = 0

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    __pycache__

[tool:pytest]
addopts = -vv
python_files =
    *.py
testpaths =
    tests

[tox:tox]
minversion = 3.4.0
envlist = py35

[testenv]

commands =
    pip install -e .[dev]
    pytest -vv tests
